--- a/templates/leo_manager-config.j2
+++ b/templates/leo_manager-config.j2
@@ -36,19 +36,19 @@ sasl.error_logger_mf_dir = /var/log/leo_manager/sasl
 ## --------------------------------------------------------------------
 ## MANAGER
 ## --------------------------------------------------------------------
-{% if nodename ==  leo_master %}
+{% if nodename ==  leofs_master %}
 
 ## Mode of Manager: [master, slave]
 manager.mode = master
 ## Partner of manager's alias
-manager.partner = {{ leo_slave }}
+manager.partner = {{ leofs_slave }}
 
 {% else %}
 
 ## Mode of Manager: [master, slave]
 manager.mode = slave
 ## Partner of manager's alias
-manager.partner = {{ leo_master }}
+manager.partner = {{ leofs_master }}
 
 {% endif %}
 
