--- a/templates/leo_manager-config.j2
+++ b/templates/leo_manager-config.j2
@@ -93,7 +93,7 @@ consistency.read = {{ leofs_replicaR }}
 consistency.delete = {{ leofs_replicaD }}
 
 ## A number of rack-aware replicas
-consistency.rack_aware_replicas = {{ replicaRAR }}
+consistency.rack_aware_replicas = {{ leofs_replicaRAR }}
 
 
 ## --------------------------------------------------------------------
